--- a/themes/default/templates/events/event_detail.html
+++ b/themes/default/templates/events/event_detail.html
@@ -18,7 +18,7 @@
 {% block title %}
 <div class="title">
     <h1>{{ object.title|escape|capfirst }}</h1>
-    <h2>{% block subtitle %}{% trans "Dashboard" %}{% endblock %}</h2>
+    <h2>{% block subtitle %}{% trans "Details" %}{% endblock %}</h2>
 </div>
 {% endblock %}
 
@@ -64,7 +64,7 @@
         {% block section %}
         <div class="details">
             <table class="properties">
-                {% property_table object "[['author', 'created'], ['start', 'end'], ['status', 'public'], 'location', 'description', 'attendees', 'categories', 'tags']" %}
+                {% property_table object "[['author', 'created'], ['start', 'end'], 'status', 'calendars', 'location', 'description', 'attendees', 'categories', 'tags']" %}
             </table>
             {% include "elements/comments.html" %}
         </div>
