- Fixed new "core.events" app. - Fixed i18n.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@733 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/elements/month_calendar.html
+++ b/themes/default/templates/elements/month_calendar.html
@@ -9,7 +9,11 @@
     {% endif %}
     <tr>
         {% for day, day_events in week_events.items %}
-        <td{% if day_events.values|join:""|cut:"[]" %} class="with_events"{% endif %}>
+        {% if day_events.values|join:""|cut:"[]" %}
+        <td class="{% if day == day.today %}today_with_events{% else %}with_events{% endif %}">
+        {% else %}
+        <td{% if day == day.today %} class="today"{% endif %}>
+        {% endif %}
             <span class="daynr">
                 {% if forloop.counter >= 6 %}
                 <span class="weekend">
