--- a/settings/base.py.tmpl
+++ b/settings/base.py.tmpl
@@ -205,12 +205,12 @@ INSTALLED_APPS = (
     'prometeo.core.widgets',
     'prometeo.core.menus',
     'prometeo.core.auth',
-    'prometeo.core.registration',
+    #'prometeo.core.registration',
+    'prometeo.core.events',
     'prometeo.core.notifications',
     'prometeo.core.streams',
     'prometeo.core.taxonomy',
 
-    #'prometeo.events',
     #'prometeo.todo',
     #'prometeo.addressing',
     #'prometeo.partners',
