--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -860,7 +860,9 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
     text-align: center;
 }
 
+#content .calendar .today { background-color: #ffc0c0; }
 #content .calendar .with_events { background-color: #fffecc; }
+#content .calendar .today_with_events { background-color: #ffc0c0; }
 
 #content .calendar .navigator .current { float: none; }
 
