--- a/themes/default/templates/events/event_detail.html
+++ b/themes/default/templates/events/event_detail.html
@@ -64,7 +64,7 @@
         {% block section %}
         <div class="details">
             <table class="properties">
-                {% property_table object "[['author', 'created'], ['start', 'end'], 'status', 'calendars', 'location', 'description', 'attendees', 'categories', 'tags']" %}
+                {% property_table object "[['author', 'created'], ['start', 'end'], 'status', 'location', 'description', 'attendees', 'categories', 'tags']" %}
             </table>
             {% include "elements/comments.html" %}
         </div>
