--- a/themes/default/templates/widgets/widget.html
+++ b/themes/default/templates/widgets/widget.html
@@ -4,7 +4,7 @@
     <div class="wrapper{% if widget_index and not widget_index|divisibleby:"2" %}-altrow{% endif %}" id="{{ widget.slug }}-widget">
         {% if widget.show_title %}
         <div class="title">
-            <h4>{% block widget-title %}{% trans widget.title %}{% endblock %}</h4>
+            <h4>{% block widget-title %}{% if widget.title %}{% trans widget.title %}{% else %}{% trans widget.template.title %}{% endif %}{% endblock %}</h4>
         </div>
         {% endif %}
         {% if widget.editable %}
