--- a/themes/default/templates/widgets/widget_edit.html
+++ b/themes/default/templates/widgets/widget_edit.html
@@ -40,7 +40,7 @@
 {% endif %}
     {% csrf_token %}
     <table class="properties">
-        {% property_table form "['title', ['source', 'template'], 'context', 'description']" %}
+        {% property_table form "['title', ['template', 'context']]" %}
     </table>
     <span class="submit"><input type="submit" value="{% trans 'Save' %}"/></span>
 </form>
