Moved timesheet into new "hr" app (human resources).
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@735 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings/base.py.tmpl
+++ b/settings/base.py.tmpl
@@ -212,6 +212,7 @@ INSTALLED_APPS = (
     'prometeo.core.taxonomy',
 
     #'prometeo.todo',
+    #'prometeo.hr',
     #'prometeo.addressing',
     #'prometeo.partners',
     #'prometeo.documents',
