--- a/themes/default/templates/hr/timesheet_delete.html
+++ b/themes/default/templates/hr/timesheet_delete.html
@@ -7,7 +7,6 @@
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
-    {% add_crumb 'Tasks' 'task_list' %}
     {% add_crumb 'Timesheets' 'timesheet_list' %}
     {% add_crumb object object.get_absolute_url %}
     {% add_crumb 'Delete' %}
@@ -21,7 +20,7 @@
 {% endblock %}
 
 {% block main %}
-<form method="post" action="{% url timesheet_delete object.pk %}">
+<form method="post" action="{% url timesheet_delete object.content_object.pk %}">
     {% csrf_token %}
     <p>{% trans "Are you sure you want to delete this timesheet?" %}</p>
     <span class="submit"><input type="submit" value="{% trans "Yes, I'm sure." %}" /></span>
