Improved contacts management.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@738 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/partners/job_edit.html
+++ b/themes/default/templates/partners/job_edit.html
@@ -54,7 +54,7 @@
 <form method="post" action=".">
     {% csrf_token %}
     <table class="properties">
-        {% property_table form %}
+        {% property_table form "[['partner', 'contact', 'role'], ['started', 'ended'], 'notes']" %}
     </table>
     <span class="submit"><input type="submit" value="{% trans 'Save' %}"/></span>
 </form>
