--- a/themes/default/templates/partners/contact_edit.html
+++ b/themes/default/templates/partners/contact_edit.html
@@ -39,9 +39,9 @@
     {% csrf_token %}
     <table class="properties">
         {% if object.pk %}
-        {% property_table form "[['firstname', 'lastname'], 'nickname', ['language', 'timezone'], ['ssn', 'user'], ['email', 'url'], ['main_address', 'main_phone_number'], 'tags', 'categories']" %}
+        {% property_table form "[['firstname', 'lastname'], ['nickname', 'date_of_birth'], ['gender', 'ssn'], ['language', 'timezone'], ['email', 'url'], 'user', ['main_address', 'main_phone_number'], 'tags', 'categories']" %}
         {% else %}
-        {% property_table form "[['firstname', 'lastname'], 'nickname', ['language', 'timezone'], ['ssn', 'user'], ['email', 'url'], 'tags', 'categories']" %}
+        {% property_table form "[['firstname', 'lastname'], ['nickname', 'date_of_birth'], ['gender', 'ssn'], ['language', 'timezone'], ['email', 'url'], 'user', 'tags', 'categories']" %}
         {% endif %}
     </table>
     <span class="submit"><input type="submit" value="{% trans 'Save' %}"/></span>
