Timesheets are now using "partners.Contact" instead of "auth.User".
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@739 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/hr/timesheet_detail.html
+++ b/themes/default/templates/hr/timesheet_detail.html
@@ -58,7 +58,7 @@
         <div class="details">
             <table class="properties">
                 {% property_table object "[['owner', 'status'], ['author', 'created']]" %}
-                {% property_table object.content_object "[['date', 'user'], 'working_hours']" %}
+                {% property_table object.content_object "[['employee', 'date'], 'working_hours']" %}
                 {% property_table object "['categories', 'tags']" %}
             </table>
             {% detail_table object.content_object.entries.all "['start_time', 'end_time', 'task', 'description']" %}
