--- a/reports/default/templates/hr/timesheet_pdf.html
+++ b/reports/default/templates/hr/timesheet_pdf.html
@@ -76,7 +76,7 @@ td, th {
             <th>{% trans "Code" %}</th>
             <td>{{ document.code }}</td>
             <th>{% trans "Employee" %}</th>
-            <td>{{ document.content_object.user.get_full_name|default:document.content_object.user.username }}</td>
+            <td>{{ document.content_object.employee.full_name }}</td>
         </tr>
     </table>
 
