Improved timesheet report.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@741 71535020-02ba-11df-897e-95fb7fca2173

--- a/reports/default/templates/hr/timesheet_pdf.html
+++ b/reports/default/templates/hr/timesheet_pdf.html
@@ -63,7 +63,7 @@ td, th {
             {% endblock %}
         </th>
         <td id="date">
-            <h2>{{ document.content_object.date }}<h2>
+            <h2>{{ document.owner }}<br/>{{ document.content_object.date }}<h2>
         </td>
     </tr>
 </table>
