--- a/themes/default/templates/knowledge/base.html
+++ b/themes/default/templates/knowledge/base.html
@@ -4,7 +4,7 @@
 {% load details %}
 {% load menu %}
 
-{% block meta_title %}{% trans "Wiki" %}{% endblock %}
+{% block meta_title %}{% trans "Knowledge" %}{% endblock %}
 
 {% block title %}
 <div class="title">
