Added base template for "stock" app.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@749 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/stock/deliverynote_list.html
+++ b/themes/default/templates/stock/deliverynote_list.html
@@ -1,9 +1,8 @@
-{% extends "stock/warehouse_list.html" %}
+{% extends "stock/base.html" %}
 
 {% load i18n %}
 {% load breadcrumbs %}
 {% load details %}
-{% load menu %}
 
 {% block meta_title %}{% trans "Delivery notes" %}{% endblock %}
 
