--- a/reports/default/templates/partners/letter_pdf.html
+++ b/reports/default/templates/partners/letter_pdf.html
@@ -70,7 +70,7 @@ td, th {
         {% trans "Your ref:" %} {{ document.content_object.target_ref_number }}
         <br/>
         {% endif %}
-        {% trans "Object:" %} {{ document.content_object.object }}
+        {% trans "Object:" %} {{ document.content_object.subject }}
     </p>
 
     <div style="text-align: right;">{{ document.content_object.location }}, {{ document.content_object.date }}</div>
