Added support for add links in month calendar.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@754 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -895,7 +895,12 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
     color: #c0c0c0;
 }
 
-#content .calendar .events .daynr .weekend { color: #d21717; }
+#content .calendar .events .daynr a {
+    color: #1f1f1f;
+    font-weight: normal;
+}
+
+#content .calendar .events .daynr .weekend, #content .calendar .events .daynr .weekend a { color: #d21717; }
 
 #content .calendar .events .daynr .weekend .disabled { color: #ffc0c0; }
 
