Events are now automatically added to the "month view" of the calendar.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@756 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/events/event_edit.html
+++ b/themes/default/templates/events/event_edit.html
@@ -31,11 +31,7 @@
 {% endblock %}
 
 {% block main %}
-{% if object.pk %}
-<form method="post" action="{% url event_edit object.pk %}">
-{% else %}
-<form method="post" action="{% url event_add %}">
-{% endif %}
+<form method="post" action=".">
     {% csrf_token %}
     <table class="properties">
         {% property_table form "['title', ['start', 'end'], 'description', ['status', 'public'], 'location', 'attendees', 'categories', 'tags', 'allow_comments']" %}
