Improved movement-related templates.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@757 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/stock/movement_edit.html
+++ b/themes/default/templates/stock/movement_edit.html
@@ -39,7 +39,7 @@
     {% csrf_token %}
     <table class="properties">
         {% property_table form "[['origin', 'destination']]" %}
-        {% property_table pform "['product', ['quantity', 'unit_price'], ['tax', 'discount']]" %}
+        {% property_table pform "['product', ['quantity', 'unit_price'], ['tax', 'discount'], 'notes']" %}
     </table>
     <span class="submit"><input type="submit" value="{% trans 'Save' %}"/></span>
 </form>
