--- a/themes/default/templates/stock/warehouse_edit_movement.html
+++ b/themes/default/templates/stock/warehouse_edit_movement.html
@@ -33,8 +33,8 @@
 <form method="post" action=".">
     {% csrf_token %}
     <table class="properties">
-        {% property_table form %}
-        {% property_table pform %}
+        {% property_table form "[['origin', 'destination']]" %}
+        {% property_table pform "['product', ['quantity', 'unit_price'], ['tax', 'discount'], 'notes']" %}
     </table>
     <span class="submit"><input type="submit" value="{% trans 'Save' %}"/></span>
 </form>
