--- a/settings/base.py.tmpl
+++ b/settings/base.py.tmpl
@@ -218,7 +218,7 @@ INSTALLED_APPS = (
     #'prometeo.products',
     #'prometeo.stock',
     #'prometeo.hr',
-    #'prometeo.accounting',
+    #'prometeo.sales',
     #'prometeo.projects',
     #'prometeo.knowledge',
 )
