- Added support for expense vouchers. - Improved timesheet report template.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@759 71535020-02ba-11df-897e-95fb7fca2173

--- a/reports/default/templates/hr/expensevoucher_pdf.html
+++ b/reports/default/templates/hr/expensevoucher_pdf.html
@@ -65,7 +65,7 @@ td, th {
     </p>
 
     <div class="entry-list">
-        {% detail_table document.content_object.entries.all "['start_time', 'end_time']" %}
+        {% detail_table document.content_object.entries.all "['date', 'type', 'description', 'amount']" %}
     </div>
 </div>
 {% endblock %}
