- Improved report templates of "hr" app. - Added support for report-specific i18n catalogs.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@760 71535020-02ba-11df-897e-95fb7fca2173

--- a/reports/default/templates/hr/expensevoucher_pdf.html
+++ b/reports/default/templates/hr/expensevoucher_pdf.html
@@ -67,5 +67,9 @@ td, th {
     <div class="entry-list">
         {% detail_table document.content_object.entries.all "['date', 'type', 'description', 'amount']" %}
     </div>
+
+    <p style="text-align: right;">
+        {% trans "Total amount" %}: {{ document.content_object.total_amount }}
+    </p>
 </div>
 {% endblock %}
