--- a/settings/base.py.tmpl
+++ b/settings/base.py.tmpl
@@ -78,6 +78,7 @@ USE_L10N = True
 LOCALE_PATHS = (
     os.path.join(PROJECT_PATH, 'settings', 'locale'),
     os.path.join(THEME_PATH, 'locale'),
+    os.path.join(REPORT_PATH, 'locale'),
 )
 
 # Absolute filesystem path to the directory that will hold user-uploaded files.
