Added "Employee" model to the "hr" app.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@763 71535020-02ba-11df-897e-95fb7fca2173

--- a/reports/default/templates/hr/expensevoucher_pdf.html
+++ b/reports/default/templates/hr/expensevoucher_pdf.html
@@ -61,7 +61,7 @@ td, th {
         <br/>
         {% trans "Date" %}: {{ document.content_object.date }}
         <br/>
-        {% trans "Employee" %}: {{ document.content_object.employee.full_name }}
+        {% trans "Employee" %}: {{ document.content_object.employee }}
     </p>
 
     <div class="entry-list">
