--- a/reports/default/templates/hr/timesheet_pdf.html
+++ b/reports/default/templates/hr/timesheet_pdf.html
@@ -61,7 +61,7 @@ td, th {
         <br/>
         {% trans "Date" %}: {{ document.content_object.date }}
         <br/>
-        {% trans "Employee" %}: {{ document.content_object.employee.full_name }}
+        {% trans "Employee" %}: {{ document.content_object.employee }}
     </p>
 
     <div class="entry-list">
