--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -266,6 +266,8 @@ td .yes, td .no {
     text-align: center;
 }
 
+.avatar img { margin: 0; }
+
 form .submit input, .submit a {
     float: right;
     width: auto;
@@ -1197,6 +1199,7 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
 #main .details .avatar img {
     padding: 5px;
     border: 1px solid #c0c0c0;
+    background: #fff;
 }
 
 #main .properties {
@@ -1281,19 +1284,30 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
 #main #comments li {
     padding: 10px; 
     background: none;
+    min-height: 47px;
 }
 
 #main #comments li.altrow { background: #f8f8f8; }
 
-#main #comments li .meta p { margin: 0; }
+#main #comments li .meta p { margin: 0 0 -10px; }
+
+#main #comments li .meta .avatar {
+    float: left;
+    margin-right: 10px;
+    margin-bottom: 0;
+}
 
 #main #comments li .actions {
     clear: none;
     float: right;
-    margin: -20px -5px 0 0;
+    margin: -10px -25px 0 0;
 }
 
 #main #comments li .actions li { padding: 0; }
+
+#main #comments li .body { overflow: auto; }
+
+#main #comments li .body p { margin: 10px 0 0; }
 
 #main #comments .comment-counter {
     float: right;
