--- a/themes/default/templates/elements/comments.html
+++ b/themes/default/templates/elements/comments.html
@@ -26,7 +26,7 @@
                     {% endif %}
                 </ul>
             </div>
-            {{ comment.comment|markdown }}
+            <div class="body">{{ comment.comment|markdown }}</div>
         </li>
         {% endfor %}
     </ul>
