Renamed the "core.events" app in "core.calendar".
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@774 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/calendar/event_month.html
+++ b/themes/default/templates/calendar/event_month.html
@@ -1,7 +1,13 @@
-{% extends "events/event_list.html" %}
+{% extends "calendar/base.html" %}
 
 {% load i18n %}
+{% load breadcrumbs %}
 {% load calendar %}
+
+{% block breadcrumbs %}
+    {% add_crumb 'Home' '/' %}
+    {% add_crumb 'Events' %}
+{% endblock %}
 
 {% block subtitle %}{% trans "Month" %}{% endblock %}
 
