--- a/settings/base.py.tmpl
+++ b/settings/base.py.tmpl
@@ -207,7 +207,7 @@ INSTALLED_APPS = (
     'prometeo.core.menus',
     'prometeo.core.auth',
     #'prometeo.core.registration',
-    'prometeo.core.events',
+    'prometeo.core.calendar',
     'prometeo.core.notifications',
     'prometeo.core.streams',
     'prometeo.core.taxonomy',
