Fixed edit action link.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@787 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/projects/project_edit.html
+++ b/themes/default/templates/projects/project_edit.html
@@ -32,7 +32,7 @@
 
 {% block main %}
 {% if object.pk %}
-<form method="post" action="{% url project_edit object.slug %}">
+<form method="post" action="{% url project_edit object.code %}">
 {% else %}
 <form method="post" action="{% url project_add %}">
 {% endif %}
