Starting to simplify the management of comment and object activity notification.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@789 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/streams/activities/comment-deleted.html
+++ b/themes/default/templates/streams/activities/comment-deleted.html
@@ -1,5 +1,5 @@
 {% load i18n %}
 
 {% blocktrans %}
-<p>A comment of <a href="{{ author_link }}">{{ author }}</a> has been deleted from {{ class }} <a href="{{ link }}">{{ name }}</a>.</p>
+<p>A comment has been deleted from {{ class }} <a href="{{ link }}">{{ name }}</a> by <a href="{{ author_link }}">{{ author }}</a>.</p>
 {% endblocktrans %}
