--- a/themes/default/templates/streams/activities/object-changed.html
+++ b/themes/default/templates/streams/activities/object-changed.html
@@ -1,8 +1,14 @@
 {% load i18n %}
 
+{% if author and author_link %}
+{% blocktrans %}
+<p>The following attributes of {{ class }} <a href="{{ link }}">{{ name }}</a> has been changed by <a href="{{ author_link }}">{{ author }}</a>:</p>
+{% endblocktrans %}
+{% else %}
 {% blocktrans %}
 <p>The following attributes of {{ class }} <a href="{{ link }}">{{ name }}</a> has been changed:</p>
 {% endblocktrans %}
+{% endif %}
 <dl>
 {% for fieldname, values in changes.items %}
     <dt>{{ fieldname|capfirst }}</dt>
