--- a/themes/default/templates/streams/activities/object-deleted.html
+++ b/themes/default/templates/streams/activities/object-deleted.html
@@ -3,11 +3,11 @@
 {% with class|capfirst as class %}
 {% if author and author_link %}
 {% blocktrans %}
-<p>{{ class }} <a href="{{ link }}">{{ name }}</a> has been deleted by <a href="{{ author_link }}">{{ author }}</a>.</p>
+<p>{{ class }} {{ name }} has been deleted by <a href="{{ author_link }}">{{ author }}</a>.</p>
 {% endblocktrans %}
 {% else %}
 {% blocktrans %}
-<p>{{ class }} <a href="{{ link }}">{{ name }}</a> has been deleted.</p>
+<p>{{ class }} {{ name }} has been deleted.</p>
 {% endblocktrans %}
 {% endif %}
 {% endwith %}
